# Pinel_localizer

./: CITATION.cff  Changes.txt  README.md  TODO.txt  deprecated_menu_pinel_localizer.sh  localizer_standard.py  menu.py  menu_localizer.sh  pinel_localizer.py  pyproject.toml
english/: All-Stimuli-4session-english.xls  longlocalizercalib_english2010.es  longlocalizercalib_english2010.wndpos
spanish/: All-Stimuli-4session.xls  longlocalizercalib2_espagnol.es
